# CT-hackathon-backend

./: .env_local  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  env_example  nginx.conf  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: CT-hackathon_workflow.yml
backend/: Dockerfile  requirements.txt
backend/api/: pagination.py  permissions.py  serializers.py  urls.py  views.py
backend/backend/: constants.py  settings.py  urls.py
backend/core/: enums.py
backend/data/: Course.csv  Grade.csv  HardSkill.csv  Kanban.csv  Language.csv  Location.csv  OfficeFormat.csv  Specialty.csv  WorkFormat.csv  WorkSchedule.csv
backend/students/: admin.py  models.py  serializers.py  urls.py  views.py
backend/students/migrations/: 0001_initial.py  0002_alter_student_course_list_alter_student_education_and_more.py  0002_course_hardskill_alter_student_options_and_more.py  0002_language_studentlanguage_student_language.py  0003_alter_student_current_location_and_more.py
backend/tests/: factories.py  test_api_endpoints.py  test_url.py
backend/users/: admin.py  models.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_alter_user_options_alter_user_email_and_more.py
backend/utils/: constants.py  factories.py  image_utils.py  validators.py
backend/vacancies/: admin.py  models.py
backend/vacancies/migrations/: 0001_initial.py  0002_alter_candidate_student_alter_candidate_vacancy.py  0002_alter_vacancy_author_alter_vacancy_work_experience.py  0002_vacancy_language_vacancy_language_level.py  0002_vacancystudents_created_at_and_more.py  0003_alter_kanban_color.py  0003_rename_vacancystudents_vacancystudent.py  0003_vacancy_portfolio.py  0004_alter_candidate_notes.py  0005_alter_filter_options.py  (+3 more)
docs/: dev_rules.md
frontend/: .dockerignore  .eslintrc.cjs  .prettierrc  .stylelintignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json
frontend/src/: main.tsx  theme.ts
infra/: .env_example  docker-compose.yml  docker-compose_local.yml  nginx.conf
py_client/: student_detail.py  student_list.py
(+110 files in other folders)
